# Speechy

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.conf/: training.yaml
model/: gender-detector-scaler.joblib  gender-detector.joblib
notebooks/: feature_extraction.ipynb  test_ecapa.ipynb
scripts/: audio_conversion.sh
src/api/: app.py  schemas.py
src/config/: paths.py
src/data/: base.py  featurize.py  prepare.py
src/frontend/: app.py
src/gender_detector/: __init__.py  base.py  ecapa.py  speechy.py  svm_detector.py
src/modelling/: enums.py  train.py
src/vad/: base.py  silero.py
