[project]
name = "speechy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "huggingface-hub>=0.33.4",
    "pysoundfile>=0.9.0.post1",
    "safetensors>=0.5.3",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

# New section added here to instruct setuptools to find packages inside src/
[tool.setuptools.packages.find]
where = ["src"]
